--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,5 @@ __marimo__/
 
 # Streamlit
 .streamlit/secrets.toml
+media/projects/files/work_reports.xlsx
+media/projects/files/work_reports_M8G538p.xlsx
