Обновление админки и моделей проекта: добавлена уникальная генерация slug, улучшен интерфейс админки для отчетов, обновлены шаблоны для отображения ссылок на проекты.

--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,6 @@ __marimo__/
 .streamlit/secrets.toml
 media/projects/files/work_reports.xlsx
 media/projects/files/work_reports_M8G538p.xlsx
+media/projects/images/1761240029.png
+media/projects/files/work_reports_1.xlsx
+media/projects/files/work_reports_l1WuhxA.xlsx
