--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,10 @@ media/projects/files/work_reports_M8G538p.xlsx
 media/projects/images/1761240029.png
 media/projects/files/work_reports_1.xlsx
 media/projects/files/work_reports_l1WuhxA.xlsx
+media/projects/files/1761233007.png
+media/projects/files/1761233836.png
+media/projects/files/1761237124.png
+media/projects/files/1761237715_1.png
+media/projects/files/1761237715.png
+media/projects/files/1761239118.png
+media/projects/files/1761240029.png
